# par-prog

./: README.md
basic/: CMakeLists.txt  README.md
basic/src/: main.cpp  mpi_support.cpp
comm_delay/: CMakeLists.txt  README.md
comm_delay/inc/: mpi_support.hpp
comm_delay/src/: main.cpp
cycle_parallelization/: CMakeLists.txt  README.md  plt.py
cycle_parallelization/inc/: stopwatch.hpp
cycle_parallelization/mpi/: CMakeLists.txt
cycle_parallelization/mpi/inc/: mpi_support.hpp
cycle_parallelization/mpi/src/: mpi_support.cpp  task01.cpp
cycle_parallelization/omp/: CMakeLists.txt
cycle_parallelization/omp/inc/: stopwatch.hpp
cycle_parallelization/omp/src/: task01.cpp  task02.cpp
cycle_parallelization/src/: task01.cpp
global_stack/: CMakeLists.txt  README.md
global_stack/.cache/clangd/index/: global_stack.cpp.F7FFE023105ED1CB.idx  global_stack.hpp.5CD3BB70C945159E.idx  main.cpp.67517365CA9F6B09.idx
global_stack/inc/: global_stack.hpp
global_stack/src/: global_stack.cpp  main.cpp
pi_estimation/: CMakeLists.txt  README.md
pi_estimation/src/: main.cpp  mpi_support.cpp
subpalindromes/: CMakeLists.txt  README.md
subpalindromes/inc/: subpalindromes.hpp
subpalindromes/scripts/: gen.py
subpalindromes/src/: driver.cpp
transfer_equation/: CMakeLists.txt  README.md
transfer_equation/inc/: comp_math.hpp  mpi_support.hpp
transfer_equation/src/: comp_math.cpp  main.cpp  mpi_support.cpp  parallel.cpp  sequential.cpp
